--- a/app/src/main/res/drawable/deeded5.xml
+++ b/app/src/main/res/drawable/deeded5.xml
@@ -9,7 +9,7 @@
             <shape xmlns:android="http://schemas.android.com/apk/res/android"
                 android:thickness="0dp"
                 android:shape="rectangle">
-                <solid android:color="@color/yellow_500"/>
+                <solid android:color="@color/black"/>
             </shape>
         </item>
     </ripple>
