--- a/app/src/main/res/drawable/for_edit2.xml
+++ b/app/src/main/res/drawable/for_edit2.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <corners android:radius="5dp" />
     <solid android:color="@color/white"/>
-    <stroke android:width="3dp" android:color="@color/yellow_500" />
+    <stroke android:width="3dp" android:color="@color/black" />
 </shape>
